feat: tablet initial layout - background repositioning

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
         <img class="pocket socialsList" src="./assets/desktop/pocket-casts.svg" alt="">
       </div>
 
-
-
-
-      Request access
+      <form>
+        <label>
+          <input type="email" name="email" class="submitDocs" required placeholder="Email address">
+        </label>        
+        <input type="submit" value="Request access">
+      </form>
     </main>
   </div>
 
