fix: footer image - changed the container to use a separate one

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <input type="submit" value="Request access">
       </form>
     </main>
+    <footer>
+     <img src="./assets/desktop/bg-pattern-dots.svg" alt="" srcset="">
+    </footer>
   </div>
 
 </body>
