feat: javascript data control - email must be provided

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <form>
         <label>
           <input type="email" name="email" class="submitDocs" required placeholder="Email address">
+          <span class="errorMsg">Oops! Please check your email</span>
         </label>        
         <input type="submit" value="Request access">
       </form>
@@ -53,7 +54,7 @@
      <img src="./assets/desktop/bg-pattern-dots.svg" alt="" srcset="">
     </footer>
   </div>
-
+ <script src="main.js"></script>
 </body>
 
 </html>
