--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </form>
     </main>
     <footer>
-     <img src="./assets/desktop/bg-pattern-dots.svg" alt="" srcset="">
+     <img src="./assets/desktop/bg-pattern-dots.svg" alt="">
     </footer>
   </div>
  <script src="main.js"></script>
